poke/testsuite/poke.pkl/return-diag-2.pk
/* { dg-do compile } */

return 0; /* { dg-error "" } */
